tests/NormalTests/paczka1/small_fuzzy/93692480.err
Error in line 2: 5CFqjn3cpk A392 56,0
Error in line 4: 5CFqjn3cpk A566 8,9
Error in line 7: kmdbzfdYq S919 14,9
